--- a/society-management-app/src/index.css
+++ b/society-management-app/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  background-color: #F5F7FA;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
